# RSD-Spotlight-Migration

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  Dockerfile  LICENSE.md  README.md  main.py  poetry.lock.license  pyproject.toml  start.sh  wait-for.sh
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  lint.yml  release.yml
.github/workflows/prepare-action/: action.yml
htmlparser/: __init__.py  parser.py
mdparser/: mdparser.py
resources/: Imprint.md
