# SPDX-FileCopyrightText: 2022 Helmholtz Centre Potsdam - GFZ German Research Centre for Geosciences
#
# SPDX-License-Identifier: CC0-1.0

[tool.poetry]
name = "RSD-initial-data"
version = "0.0.1"
description = "Initial data for the RSD deployment"
authors = [
    "Matthias Rüster, GFZ <matthias.ruester@gfz-potsdam.de>",
    "Christian Meeßen, GFZ <christian.meessen@gfz-potsdam.de>",
]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
postgrest-py = "^0.10.2"
pyyaml = "^6.0"
PyJWT = "^2.8.0"
python-magic = "^0.4.27"
ipdb = "^0.13.9"

[tool.poetry.dev-dependencies]
black = "^23.11.0"
