# SPDX-FileCopyrightText: 2022 Helmholtz Centre Potsdam - GFZ German Research Centre for Geosciences
# SPDX-FileCopyrightText: 2023 Helmholtz Centre for Environmental Research (UFZ)
#
# SPDX-License-Identifier: CC0-1.0

[tool.poetry]
name = "RSD-Spotlights-Migration"
version = "2.0.0"
description = "Initial data for the RSD deployment"
authors = [
    "Matthias Rüster, GFZ <matthias.ruester@gfz-potsdam.de>",
    "Christian Meeßen, GFZ <christian.meessen@gfz-potsdam.de>",
    "Norman Ziegner, UFZ <norman.ziegner@ufz.de>",
]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
postgrest-py = "^0.10.6"
pyyaml = "^6.0.1"
PyJWT = "^2.8.0"
python-magic = "^0.4.27"
ipdb = "^0.13.13"

[tool.poetry.dev-dependencies]
black = "^24.4.1"
isort = "^5.13.2"
